name:                aoc2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Oleksandr Dudarenko
maintainer:          example@example.com
copyright:           nineonine
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2017
  ghc-options: -O2 -rtsopts
  -- other-modules:       Day13
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     , bytestring
